feat: Add packaged Tetrue